[package]
name = "debrelka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.13", features = ["http2", "headers"] }
env_logger = "0.9.0"
log = "0.4.17"
notify = "4.0.17"
rusqlite = "0.28.0"
serde = "1.0.139"
serde_derive = "1.0.139"
tokio = { version = "1.20.0", features = ["sync", "rt", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["compression-gzip", "compression-br"] }
uuid = { version = "1.1.2", features = ["v4"] }
